--- a/Record.html
+++ b/Record.html
@@ -11,7 +11,7 @@
 		
 				<img src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Jan_Zelezny.jpg" style="width: 200px"></img> <br>
 				<p>(Jan Železný)</p>
-				<img src="Lancio2.JPG" style="width: 200px"></img>
+				<img src="Lancio2.jpg" style="width: 200px"></img>
 				<p>(Barbora Špotáková)</p>
 	</body>
 </html>
