--- a/Tecniche_di_lancio.html
+++ b/Tecniche_di_lancio.html
@@ -2,7 +2,7 @@
 <head>
 		<title>Tecniche di lancio</title>
 		<meta name="author" content="Paolo Dose">
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="Style.css">
 	</head>
 	<body>
 		<br>
