--- a/Record.html
+++ b/Record.html
@@ -9,8 +9,8 @@
 		<h2>Record</h2><br>
 			<p>Il record mondiale del lancio del giavellotto è di 98,48 metri per gli uomini, stabilito dal ceco Jan Železný il 25 maggio 1996 all'Ernst-Abbe-Sportfeld di Jena (Germania) e di 72,28 metri per le donne, stabilito dalla ceca Barbora Špotáková il 13 settembre 2008 a Stoccarda (Germania). </p><br><br>
 		
-				<img src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Jan_Zelezny.jpg" style="width: 200px"></img> <br>
-				<p>(Jan Železný)</p>
+				<img src="https://upload.wikimedia.org/wikipedia/commons/a/a2/Jan_Zelezny.jpg" style="width: 200px"></img>
+				<p>(Jan Železný)</p> <br>
 				<img src="Lancio2.jpg" style="width: 200px"></img>
 				<p>(Barbora Špotáková)</p>
 	</body>
