--- a/Tecniche_di_lancio.html
+++ b/Tecniche_di_lancio.html
@@ -12,5 +12,7 @@
 			La fase aciclica è la fase fondamentale del lancio, poiché culmina col rilascio dell'attrezzo: i passi incrociati (che variano in numero a seconda della preparazione fisica e della tecnica dell'atleta) terminano col passo impulso, un passo più lungo degli altri che porta il corpo verso la fase di puntello, dove la gamba sinistra (per un atleta destrorso) si blocca puntandosi alla pedana e facendo ruotare tutto il corpo su di essa. È importante che il puntello avvenga ad una distanza tale dalla linea bianca che sia possibile anche il recupero, ovvero l'arresto completo del corpo dopo la frustata di rilascio dell'attrezzo. Molti sono gli aspetti da tenere in considerazione per un buon lancio: l'impugnatura, l'importantissimo gioco di gambe, la rilassatezza dell'arto lanciante e molte altre finezze, che sono diverse per ogni 	lanciatore, e che si affinano solo attraverso ripetute prove in allenamento. </p><br><br>
 			<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRUMV4Xh4GI6tEKppAaYq0qwyhJ68IqCLZ9JBs0GaY_HYuz_w4Dd_D5l7094Pji7cEZVJY&usqp=CAU" style="width: 300px"></img> <br><br>
 			<img src="Lancio4.jpg" style="width: 300px"></img> <br>
+
+		<script src="https://www.gdprset.it/widget/gdpr-it-1.js" type="text/javascript"></script>
 	</body>
 </html>
