--- a/Record.html
+++ b/Record.html
@@ -13,5 +13,6 @@
 				<p>(Jan Železný)</p> <br>
 				<img src="Lancio2.jpg" style="width: 200px"></img>
 				<p>(Barbora Špotáková)</p>
+			<script src="https://www.gdprset.it/widget/gdpr-it-1.js" type="text/javascript"></script>
 	</body>
 </html>
